spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,7 +448,7 @@ div.absolute {
 
 @media (max-width: 768px) {
   .ppd-spa{
-    margin-top: 135px;
+    margin-top: 49px;
   }
   html {
     height: 100%;
